cabal-version:      3.8
name:               hsqml
version:            0.3.6.0
build-type:         Custom
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          (c) 2010-2018 Robin KAY
author:             Robin KAY
maintainer:         komadori@gekkou.co.uk
stability:          experimental
homepage:           http://www.gekkou.co.uk/software/hsqml/
category:           Graphics, GUI
synopsis:           Haskell binding for Qt Quick
tested-with:        GHC ==9.4.8 || ==9.6.6 || ==9.8.2
extra-source-files:
  cbits/*.cpp
  cbits/*.h
  CHANGELOG
  README
  test/Graphics/QML/Test/*.hs

description:
  A Haskell binding for Qt Quick, a cross-platform framework for creating
  graphical user interfaces. For further information on installing and using
  this library, please see the project's web site.

source-repository head
  type:     git
  location: https://github.com/prolic/HsQML

flag UsePkgConfig
  description:
    Use pkg-config for libraries instead of the platform default mechanism.

  default:     False

flag ThreadedTestSuite
  description: Build test executable with the threaded RTS.
  default:     True

flag ForceGHCiLib
  description:
    Force enable GHCi workaround library if not using shared libraries.

  default:     True

flag UseExitHook
  description:
    Override the OnExitHook symbol to shutdown the Qt framework on exit.

  default:     True

flag EnableQmlDebugging
  description: Allow the QML debug server to be enabled via Qt arguments.
  default:     False

custom-setup
  setup-depends:
    , base              >=4    && <5
    , Cabal             >=3.12 && <4.0
    , filepath          >=1.3  && <1.6
    , template-haskell  >=2    && <3

common extensions
  default-extensions:
    NoPolyKinds
    TypeOperators

  default-language:   GHC2021

common ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -fshow-hole-constraints
    -Wno-unticked-promoted-constructors

library
  import:             extensions
  import:             ghc-options
  build-depends:
    , base          >=4   && <5
    , bytestring
    , containers    >=0.4 && <0.8
    , filepath      >=1.3 && <1.6
    , tagged        >=0.4 && <0.9
    , text          >=2.0 && <2.2
    , transformers  >=0.2 && <0.7

  exposed-modules:
    Graphics.QML
    Graphics.QML.Canvas
    Graphics.QML.Debug
    Graphics.QML.Engine
    Graphics.QML.Marshal
    Graphics.QML.Model
    Graphics.QML.Objects
    Graphics.QML.Objects.ParamNames
    Graphics.QML.Objects.Weak

  other-modules:
    Graphics.QML.Internal.BindCanvas
    Graphics.QML.Internal.BindCore
    Graphics.QML.Internal.BindObj
    Graphics.QML.Internal.BindPrim
    Graphics.QML.Internal.JobQueue
    Graphics.QML.Internal.Marshal
    Graphics.QML.Internal.MetaObj
    Graphics.QML.Internal.Objects
    Graphics.QML.Internal.Types

  hs-source-dirs:     src
  cxx-sources:
    cbits/Canvas.cpp
    cbits/Class.cpp
    cbits/Engine.cpp
    cbits/Intrinsics.cpp
    cbits/Manager.cpp
    cbits/Model.cpp
    cbits/Object.cpp

  include-dirs:       cbits
  x-moc-headers:
    cbits/Canvas.h
    cbits/Engine.h
    cbits/Manager.h
    cbits/Model.h

  cc-options:         "--std=c++11"
  x-separate-cbits:   True
  build-tool-depends: c2hs:c2hs

  if flag(forceghcilib)
    x-force-ghci-lib: True

  if flag(useexithook)
    cc-options: -DHSQML_USE_EXIT_HOOK

  if flag(enableqmldebugging)
    cc-options: -DQT_QML_DEBUG_NO_WARNING

  if (os(windows) && !flag(usepkgconfig))
    include-dirs:    /QT_ROOT/include
    extra-libraries:
      Qt5Core
      Qt5Gui
      Qt5Widgets
      Qt5Qml
      Qt5Quick
      stdc++

    extra-lib-dirs:  /SYS_ROOT/bin /QT_ROOT/bin

    if impl(ghc <7.8)
      -- Pre-7.8 GHCi can't load eh_frame sections
      ghc-options: -optc-fno-asynchronous-unwind-tables

  else
    if (os(osx) && !flag(usepkgconfig))
      frameworks:         QtCore QtGui QtWidgets QtQml QtQuick
      cc-options:         -F /QT_ROOT/lib
      ghc-options:        -hide-option-framework-path /QT_ROOT/lib
      ghc-shared-options: -hide-option-framework-path /QT_ROOT/lib
      x-framework-dirs:   /QT_ROOT/lib

    else
      pkgconfig-depends:
        Qt5Core >=5.0 && <6.0, Qt5Gui >=5.0 && <6.0,
        Qt5Widgets >=5.0 && <6.0, Qt5Qml >=5.0 && <6.0,
        Qt5Quick >=5.0 && <6.0

    extra-libraries: stdc++

test-suite hsqml-test1
  import:         extensions
  import:         ghc-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test1.hs
  build-depends:
    , base        >=4   && <5
    , containers
    , directory
    , hsqml
    , QuickCheck  >=2.4 && <2.16
    , tagged
    , text

  other-modules:
    Graphics.QML.Test.AutoListTest
    Graphics.QML.Test.DataTest
    Graphics.QML.Test.Framework
    Graphics.QML.Test.Harness
    Graphics.QML.Test.MayGen
    Graphics.QML.Test.MixedTest
    Graphics.QML.Test.ScriptDSL
    Graphics.QML.Test.SignalTest
    Graphics.QML.Test.SimpleTest
    Graphics.QML.Test.TestObject

  if (os(osx) && !flag(usepkgconfig))
    -- Library not registered yet
    ghc-options: -hide-option-framework-path /QT_ROOT/lib

  if flag(threadedtestsuite)
    ghc-options: -threaded
