cabal-version:      3.8
Name:               hsqml
Version:            0.3.6.0
Build-type:         Custom
License:            BSD-3-Clause
License-file:       LICENSE
Copyright:          (c) 2010-2018 Robin KAY
Author:             Robin KAY
Maintainer:         saschaprolic@googlemail.com
Stability:          experimental
Homepage:           http://www.gekkou.co.uk/software/hsqml/
Category:           Graphics, GUI
Synopsis:           Haskell binding for Qt Quick

tested-with: GHC ==9.4.8 || ==9.6.6

Extra-source-files:
    README CHANGELOG
    cbits/*.cpp cbits/*.h test/Graphics/QML/Test/*.hs

Description:
    A Haskell binding for Qt Quick, a cross-platform framework for creating
    graphical user interfaces. For further information on installing and using
    this library, please see the project's web site.

Source-repository head
    type:     git
    location: https://github.com/prolic/HsQML

Flag UsePkgConfig
    Description:
        Use pkg-config for libraries instead of the platform default mechanism.
    Default: False

Flag ThreadedTestSuite
    Description:
        Build test executable with the threaded RTS.
    Default: True

Flag ForceGHCiLib
    Description:
        Force enable GHCi workaround library if not using shared libraries.
    Default: True

Flag UseExitHook
    Description:
        Override the OnExitHook symbol to shutdown the Qt framework on exit.
    Default: True

Flag EnableQmlDebugging
    Description:
        Allow the QML debug server to be enabled via Qt arguments.
    Default: False

Custom-Setup
    Setup-depends:
        base             == 4.*,
        template-haskell == 2.*,
        Cabal            >= 3.0 && < 4.0,
        filepath         >= 1.3 && < 1.6

common extensions
  default-extensions:
    NoPolyKinds
    TypeOperators

  default-language:   GHC2021

common ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -fshow-hole-constraints
    -Wno-unticked-promoted-constructors

Library
    import: extensions
    import: ghc-options
    Build-depends:
        base         == 4.*,
        bytestring,
        containers,
        directory,
        filepath,
        text,
        tagged,
        transformers,
        QuickCheck >= 2.4 && < 2.16,
    Exposed-modules:
        Graphics.QML
        Graphics.QML.Debug
        Graphics.QML.Canvas
        Graphics.QML.Engine
        Graphics.QML.Marshal
        Graphics.QML.Model
        Graphics.QML.Objects
        Graphics.QML.Objects.ParamNames
        Graphics.QML.Objects.Weak
    Other-modules:
        Graphics.QML.Internal.BindPrim
        Graphics.QML.Internal.BindCanvas
        Graphics.QML.Internal.BindObj
        Graphics.QML.Internal.BindCore
        Graphics.QML.Internal.JobQueue
        Graphics.QML.Internal.Marshal
        Graphics.QML.Internal.MetaObj
        Graphics.QML.Internal.Objects
        Graphics.QML.Internal.Types
    Hs-source-dirs: src
    Cxx-sources:
        cbits/Canvas.cpp
        cbits/Class.cpp
        cbits/ClipboardHelper.cpp
        cbits/Engine.cpp
        cbits/HighDpiScaling.cpp
        cbits/Intrinsics.cpp
        cbits/Manager.cpp
        cbits/Model.cpp
        cbits/Object.cpp
    Include-dirs: cbits
    X-moc-headers:
        cbits/Canvas.h
        cbits/ClipboardHelper.h
        cbits/Engine.h
        cbits/HighDpiScaling.h
        cbits/Manager.h
        cbits/Model.h
    Cxx-options: --std=c++11
    X-separate-cbits: True
    build-tool-depends: c2hs:c2hs
    if flag(ForceGHCiLib)
        X-force-ghci-lib: True
    if flag(UseExitHook)
        Cxx-options: -DHSQML_USE_EXIT_HOOK
    if flag(EnableQmlDebugging)
        Cxx-options: -DQT_QML_DEBUG_NO_WARNING
    if os(windows) && !flag(UsePkgConfig)
        Include-dirs: /QT_ROOT/include
        Extra-libraries:
            Qt5Core, Qt5Gui, Qt5Widgets, Qt5Qml, Qt5Quick, Qt5Network, stdc++
        Extra-lib-dirs: /SYS_ROOT/bin /QT_ROOT/bin
        if impl(ghc < 7.8)
            -- Pre-7.8 GHCi can't load eh_frame sections
            GHC-options: -optc-fno-asynchronous-unwind-tables
    else
        if os(darwin) && !flag(UsePkgConfig)
            Frameworks: QtCore QtGui QtWidgets QtQml QtQuick QtNetwork
            Cxx-options: -F /QT_ROOT/lib
            Extra-framework-dirs: /QT_ROOT/lib
        else
            Pkgconfig-depends:
                Qt5Core    >= 5.0 && < 6.0,
                Qt5Gui     >= 5.0 && < 6.0,
                Qt5Widgets >= 5.0 && < 6.0,
                Qt5Qml     >= 5.0 && < 6.0,
                Qt5Quick   >= 5.0 && < 6.0,
                Qt5Network >= 5.0 && < 6.0
        Extra-libraries: stdc++

Test-Suite hsqml-test1
    import: extensions
    import: ghc-options
    Type: exitcode-stdio-1.0
    Hs-source-dirs: test
    Main-is: Test1.hs
    Build-depends:
        base       == 4.*,
        containers >= 0.4 && < 0.7,
        directory  >= 1.1 && < 1.4,
        text       >= 2.0 && < 2.2,
        tagged     >= 0.4 && < 0.9,
        QuickCheck >= 2.15 && < 2.16,
        hsqml
    Other-modules:
        Graphics.QML.Test.AutoListTest
        Graphics.QML.Test.DataTest
        Graphics.QML.Test.Framework
        Graphics.QML.Test.Harness
        Graphics.QML.Test.MayGen
        Graphics.QML.Test.MixedTest
        Graphics.QML.Test.ScriptDSL
        Graphics.QML.Test.SignalTest
        Graphics.QML.Test.SimpleTest
        Graphics.QML.Test.TestObject
    if os(darwin) && !flag(UsePkgConfig)
        -- Library not registered yet
        GHC-options: -hide-option-framework-path /QT_ROOT/lib
    if flag(ThreadedTestSuite)
        GHC-options: -threaded
